# experimentum

./: README.md
artifacts/: build.sh
src/: CMakeLists.txt
src/experimentum/: CMakeLists.txt  main.cpp
src/experimentum/mode/: modes_loader.cpp  modes_loader.hpp  modes_manager.cpp  modes_manager.hpp
src/experimentum/ui/: main_window.cpp  main_window.hpp
src/firlus/: CMakeLists.txt
src/firlus/include/firlus/shader/: shader.h
src/firlus/include/firlus/shape/: shape.h
src/firlus/shader/: shader.cpp  shader.h
src/firlus/src/shader/: shader.cpp
src/firlus/src/shape/: shape.cpp
src/math/: CMakeLists.txt
src/mode_api/: CMakeLists.txt
src/mode_api/include/: mode.hpp  mode_info.hpp
src/modes/: CMakeLists.txt
src/modes/firlus_playground/: CMakeLists.txt  base.cpp
src/modes/firlus_playground/metadata/: firlus_playground_mode.cpp  firlus_playground_mode.hpp  firlus_playground_mode_info.cpp  firlus_playground_mode_info.hpp
src/modes/firlus_playground/shaders/: base.fs  base.vs
src/modes/fractals/: CMakeLists.txt
src/modes/pixelate/: CMakeLists.txt  base.cpp
src/modes/pixelate/calculator/: calculator.cpp  calculator.hpp  gng_calculator.cpp  gng_calculator.hpp  kmeans_calculator.cpp  kmeans_calculator.hpp
src/modes/pixelate/main_view/: main_contract.hpp  main_presenter.cpp  main_presenter.hpp  main_router.cpp  main_router.hpp  main_view.cpp  main_view.hpp
src/modes/pixelate/metadata/: pixelate_mode.cpp  pixelate_mode.hpp  pixelate_mode_info.cpp  pixelate_mode_info.hpp
src/modes/pixelate/view/: view.cpp  view.hpp
src/modes/ray_tracing/: CMakeLists.txt  base.cpp
src/modes/ray_tracing/engine/: engine.cpp  engine.hpp  ray.cpp  ray.hpp
src/modes/ray_tracing/metadata/: ray_tracing_mode.cpp  ray_tracing_mode.hpp  ray_tracing_mode_info.cpp  ray_tracing_mode_info.hpp
(+31 files in other folders)
